--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -183,20 +183,52 @@ header.hidden
   transform: translateY(-100%);
 }
 
-.mainTitle
-{
-  color: black;
-  text-align: center;
-  font-size: 8rem;
-  font-weight: normal;
-  position: absolute;
-  top: 30%;
-  left: 50%;           
-  transform: translate(-50%, -50%); 
-  z-index: 10;         
-  letter-spacing: 0.15em;
-  grid-column: 1/5;
-  grid-row: 2/3;
+.backButton
+{ 
+  color: white; 
+  background-color: black; 
+  text-align: center; 
+  font-size: 2.25rem; 
+  font-weight: normal; 
+  letter-spacing: 0.15em; 
+  grid-column: 1/2; 
+  grid-row: 1/2; 
+  text-decoration: none; 
+  justify-self: center;
+  align-self: center; 
+  z-index: 10;
+}
+
+.mainTitle 
+{ 
+  color: black; 
+  text-align: center; 
+  font-size: 8rem; 
+  font-weight: normal; 
+  position: absolute; 
+  top: 30%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  z-index: 10; 
+  letter-spacing: 0.15em; 
+  grid-column: 1/5; 
+  grid-row: 2/3; 
+}
+
+.mainTitleWhite 
+{ 
+  color: white; 
+  text-align: center; 
+  font-size: 8rem; 
+  font-weight: normal; 
+  position: absolute; 
+  top: 30%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  z-index: 10; 
+  letter-spacing: 0.15em; 
+  grid-column: 1/5; 
+  grid-row: 2/3; 
 }
 
 .headerImg
@@ -212,14 +244,14 @@ header.hidden
   grid-column: 1/5;
   grid-row: 3/4;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
   column-gap: 10rem;
 }
 
 .secondTitle
 {
-  grid-column: 1/6;
+  grid-column: 1/5;
   grid-row: 1/2;
   color: white;
   text-align: center;
@@ -228,106 +260,110 @@ header.hidden
   letter-spacing: 0.15em;
 }
 
-.bookStack 
+.nationText
 {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  position: relative;
-  width: 17rem;
-  height: auto;
-  min-height: 26.0625rem;
-  margin: 0 auto;
+  grid-column: 1/5;
+  grid-row: 2/3;
+  color: white;
+  text-align: center;
+  font-size: 2.25rem;
+  font-weight: normal;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
-.bookStack a 
+.thirdTitle
 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 0.5s ease, z-index 0s ease 0.5s;
+  grid-column: 1/5;
+  grid-row: 3/4;
+  color: white;
+  text-align: center;
+  font-size: 6.25rem;
+  font-weight: normal;
+  letter-spacing: 0.15em;
 }
 
-.bookOneCover 
+/* Covers */
+
+.castCoverOne, 
+.castCoverTwo, 
+.castCoverThree, 
+.castCoverFour
 {
-  position: relative; 
-  z-index: 3;         
-  transform: scale(1) translateX(0) translateY(0);
+  text-align: center;
 }
 
-.bookTwoCover 
+.castCoverOne
 {
-  position: absolute;
-  z-index: 2;
-  transform: scale(0.9) translateX(0) translateY(0);
+  grid-column: 1/2;
+  grid-row: 4/5;
 }
 
-.bookThreeCover 
-{
-  position: absolute;
-  z-index: 1;
-  transform: scale(0.8) translateX(0) translateY(0);
-}
-
-.bookStack:hover .bookOneCover 
-{
-  transform: scale(1) translateX(0) translateY(0);
-}
-
-.bookStack:hover .bookTwoCover 
-{
-  transform: scale(0.85) translateX(5rem) translateY(0.3125rem);
-}
-
-.bookStack:hover .bookThreeCover 
-{
-  transform: scale(0.75) translateX(10rem) translateY(0.625rem);
-}
-
-.bookStack img 
-{
-  width: 100%;
-  display: block;
-}
-
-/* Silent Stories */
-.bookStack.ss 
-{
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
-}
-
-/* Lost Pages */
-.bookStack.lp 
-{
-  grid-column: 4 / 5;
-  grid-row: 2 / 3;
-}
-
-.msText
+.castCoverTwo
 {
   grid-column: 2/3;
-  grid-row: 3/4; 
+  grid-row: 4/5;
 }
 
-.ssText
+.castCoverThree
 {
   grid-column: 3/4;
-  grid-row: 3/4; 
+  grid-row: 4/5;
 }
 
-.lpText
+.castCoverFour
 {
   grid-column: 4/5;
-  grid-row: 3/4; 
+  grid-row: 4/5;
 }
 
-.lpText, .ssText, .msText
-{ 
-  text-align: center;
-  color:white;
+/* Text */
+
+.castTextOne, 
+.castTextTwo, 
+.castTextThree, 
+.castTextFour
+{
   text-decoration: none;
+  text-align: center;
+  color: white;
   font-size: 2.25rem;
-  letter-spacing: 0.05em;
+}
+
+.castTextOne
+{
+  grid-column: 1/2;
+  grid-row: 5/6;
+}
+
+.castTextTwo
+{
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+
+.castTextThree
+{
+  grid-column: 3/4;
+  grid-row: 5/6;
+}
+
+.castTextFour
+{
+  grid-column: 4/5;
+  grid-row: 5/6;
+}
+
+.castCoverOne, 
+.castTextOne
+{
+  padding-left: 5rem;
+}
+
+.castCoverFour, 
+.castTextFour
+{
+  padding-right: 5rem;
 }
 
 footer
