--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -401,3 +401,101 @@ footer
   padding-left: 1rem;
   padding-top: 1rem;
 }
+
+@media (max-width: 768px) 
+{
+  .mainTitle 
+  {
+    position: relative;      /* niet meer absolute */
+    top: auto;
+    left: auto;
+    transform: none;
+    text-align: center;
+    font-size: 3rem;         /* eventueel kleiner */
+    margin: 3rem 0;          /* ruimte boven en onder */
+  }
+
+  .secondTitle 
+  {
+    font-size: 3rem;
+  }
+  
+  .lpText, .ssText, .msText 
+  {
+    font-size: 1.5rem;
+  }
+
+  main 
+  {
+    grid-template-columns: 1fr 2fr 2fr 1fr; 
+  }
+
+  .middleBlock 
+  {
+    display: flex;
+    flex-direction: column;  
+    gap: 2rem;             
+    align-items: center;
+  }
+
+  .bookTwoCover,
+  .bookThreeCover 
+  {
+    display: none;
+  }
+
+  .bookStack 
+  {
+    display: block;
+    width: 80%;
+    margin: 2rem auto;
+    position: relative;
+  }
+
+  .bookStack a.bookOneCover 
+  {
+    position: relative;
+    width: 100%;
+    transform: none;
+  }
+
+  header 
+  {
+    grid-template-columns: 1fr 1fr 1fr;
+    height: auto;
+  }
+
+  .headerList 
+  {
+    font-size: 1rem;
+  }
+
+  .searchBar input 
+  {
+    font-size: 1rem;
+    width: 50%;
+  }
+  
+  .dcLogo 
+  {
+    height: 2.5rem;
+    width: auto;
+    padding: 0.5rem 0;
+  }
+
+  .footerTekst 
+  {
+    max-width: 80%;
+    text-align: center;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .footerImg 
+  {
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+}
