--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -102,7 +102,7 @@ header
   padding: 0.4rem 2em;
   font-size: 2.25rem;
   text-align: center;
-  border: 0.1rem solid white;
+  border: 0.1rem solid white !important;
   border-radius: 0.5rem;
   outline: none;
   background-color: black;
@@ -214,7 +214,7 @@ header.hidden
 
 .mainTitle
 {
-  color: black;
+  color: black !important;
   text-align: center;
   font-size: 8rem;
   font-weight: normal;
@@ -470,6 +470,17 @@ footer
     font-size: 1rem;
   }
 
+  .dropdownMenu li a 
+  {
+    font-size: 1rem;
+  }
+
+  .dropdownMenu 
+  {
+    width: 10rem; 
+    padding: 0.5rem 0;
+  }
+
   .searchBar input 
   {
     font-size: 1rem;
@@ -478,14 +489,13 @@ footer
   
   .dcLogo 
   {
-    height: 2.5rem;
+    height: 2rem;
     width: auto;
-    padding: 0.5rem 0;
   }
 
   .footerTekst 
   {
-    max-width: 80%;
+    max-width: 100%;
     text-align: center;
     right: auto;
     left: 50%;
