--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -102,7 +102,7 @@ header
   padding: 0.4rem 2em;
   font-size: 2.25rem;
   text-align: center;
-  border: 0.1rem solid white;
+    border: 0.1rem solid white !important;;
   border-radius: 0.5rem;
   outline: none;
   background-color: black;
@@ -230,7 +230,7 @@ header.hidden
 
 .mainTitle 
 { 
-  color: black; 
+  color: black !important;
   text-align: center; 
   font-size: 8rem; 
   font-weight: normal; 
@@ -246,7 +246,7 @@ header.hidden
 
 .mainTitleWhite 
 { 
-  color: white; 
+  color: white !important; 
   text-align: center; 
   font-size: 8rem; 
   font-weight: normal; 
