--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -336,3 +336,103 @@ footer
   padding-left: 1rem;
   padding-top: 1rem;
 }
+
+@media (max-width: 768px) 
+{
+  .mainTitle 
+  {
+    position: relative;     
+    top: auto;
+    left: auto;
+    transform: none;
+    text-align: center;
+    font-size: 3rem;        
+    margin: 3rem 0;  
+    color: black !important;     
+  }
+
+  .secondTitle 
+  {
+    font-size: 3rem;
+  }
+
+  .middleBlock 
+  {
+    display: flex;
+    flex-direction: column;  
+    gap: 2rem;             
+    align-items: center;
+  }
+
+  header 
+  {
+    height: auto;
+  }
+
+  .headerList 
+  {
+    font-size: 1rem;
+  }
+
+  .dropdownMenu li a 
+  {
+    font-size: 1rem;
+  }
+
+  .dropdownMenu 
+  {
+    width: 6rem; 
+    padding: 0.5rem 0;
+  }
+
+  .searchBar input 
+  {
+    font-size: 1rem;
+    width: 50%;
+  }
+
+  .aboutUsText
+  {
+    grid-column: 1/5;
+    grid-row: 2/3;
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: normal;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
+  }
+
+  .gooberKai
+  {
+    grid-column: 2/4;
+    text-align: center;
+    grid-row: 3/4;
+    height: 6rem;
+    width: auto;
+  }
+  
+  .dcLogo 
+  {
+    height: 2rem;
+    width: auto;
+    padding: 0;
+  }
+
+  .footerTekst 
+  {
+    max-width: 100%;
+    text-align: center;
+    right: auto;
+    left: 50%;
+    top: 10%;
+    transform: translateX(-50%);
+  }
+
+  .footerImg 
+  {
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+}
