--- a/css/nations.css
+++ b/css/nations.css
@@ -483,10 +483,36 @@ footer
     padding: 0.5rem 0;
   }
 
-  .searchBar input 
+   .searchBar 
   {
+    position: relative;
+    margin: 0 auto; 
+  }
+
+  .searchBar input
+  {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.4rem 1em;
     font-size: 1rem;
-    width: 50%;
+    display: block;
+  }
+
+  .searchBar .suggestions 
+  {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%; 
+  }
+
+  .searchBar .suggestions li 
+  {
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+    letter-spacing: 0;
+    padding-top: 0.5rem;
   }
 
   .shortText
