--- a/css/nations.css
+++ b/css/nations.css
@@ -403,7 +403,7 @@ footer
   font-size: 1.5rem;
 }
 
-.footerTekst
+.footerText
 {
   position: absolute;
   right: 0.625rem;
@@ -544,7 +544,7 @@ footer
     padding: 0;
   }
 
-  .footerTekst 
+  .footerText 
   {
     max-width: 100%;
     text-align: center;
