--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -258,7 +258,7 @@ header.hidden
   grid-row: 3/4;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   column-gap: 10rem;
 }
 
@@ -273,10 +273,41 @@ header.hidden
   letter-spacing: 0.15em;
 }
 
-.aboutUsText
+.aboutUsLinks, .aboutUsLinks a
 {
   grid-column: 1/5;
   grid-row: 2/3;
+  font-size: 2rem;
+  color: white;
+  letter-spacing: 0.15em;
+  text-decoration: none;
+  text-align: center;
+}
+
+.wpLink:hover
+{
+  color: #FF500A;
+}
+
+.dcLink:hover
+{
+  color: #5865F2;
+}
+
+.sdLink:hover
+{
+ color: #e94e1a;
+}
+
+.igLink:hover 
+{
+  color: #833ab4;
+}
+
+.aboutUsText
+{
+  grid-column: 1/5;
+  grid-row: 3/4;
   color: white;
   text-align: center;
   font-size: 2.25rem;
@@ -289,7 +320,7 @@ header.hidden
 {
   grid-column: 2/4;
   text-align: center;
-  grid-row: 3/4;
+  grid-row: 4/5;
   height: 10rem;
   width: auto;
 }
@@ -427,6 +458,11 @@ footer
     font-weight: normal;
     padding-left: 0.625rem;
     padding-right: 0.625rem;
+  }
+
+  .aboutUsLinks, .aboutUsLinks a
+  {
+    font-size: 1.25rem;
   }
 
   .gooberKai
